--- a/css/styles.css
+++ b/css/styles.css
@@ -147,3 +147,26 @@ line-height: 50px;
 font-family: 'Source Sans Pro', sans-serif;
 font-weight: 300 ;
 }
+
+table {
+    width:100%;
+    border: 1px solid white;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+table th{
+    background-color: black;
+    color: white;
+}
+
+table tr{
+    text-align:center;    
+}
+
+table tr:nth-of-type(1) th:nth-of-type(1) {
+    visibility: hidden;
+}
+
+table tr:nth-child(even){
+    background-color:#eee;
+}
