--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     Author     : Alex Nevers
     alexandra_nevers@student.uml.edu
     Undergrad @ UML in GUI I       
-    Last edited on: 10/15/2015
+    Last edited on: 11/15/2015
     CSS Styles
 */
 
@@ -15,7 +15,7 @@ body {
 
 /* background image from www.subtlepatterns.com */
 
-p {
+p, input {
     color: black;
     text-align: left;
     font-size: 12pt;
@@ -23,6 +23,10 @@ p {
     padding: 0 2px 0 2px ;
   
 }
+
+input[type=number]{
+    width: 50px;
+} 
 
 blockquote {
     font-family: 'Source Sans Pro', sans-serif;
@@ -154,6 +158,9 @@ line-height: 50px;
 font-family: 'Source Sans Pro', sans-serif;
 font-weight: 300 ;
 }
+
+/* begin table styles */
+
 
 table {
     width:100%;
